--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "serve-favicon": "~2.2.1",
     "connect-multiparty": "~2.0.0",
     "mongoose": "*",
-    "jsonwebtoken": ">=4.4.2"
+    "jsonwebtoken": ">=4.4.2",
+    "request": "~2.0"
   }
 }
