--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
   },
   "dependencies": {
     "body-parser": "~1.12.4",
+    "connect-multiparty": "~2.0.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.12.4",
     "jade": "~1.9.2",
-    "morgan": "~1.5.3",
-    "serve-favicon": "~2.2.1",
-    "connect-multiparty": "~2.0.0",
-    "mongoose": "*",
     "jsonwebtoken": ">=4.4.2",
-    "request": "~2.0"
+    "mongoose": "*",
+    "morgan": "~1.5.3",
+    "request": "~2.0",
+    "serve-favicon": "~2.2.1",
+    "socket.io": "^1.4.4"
   }
 }
