--- a/Recommender/pom.xml
+++ b/Recommender/pom.xml
@@ -25,6 +25,16 @@
 	    <version>0.11.1</version>
 	</dependency>
 	<dependency>
+		<groupId>org.apache.mahout</groupId>
+		<artifactId>mahout-core</artifactId>
+		<version>0.9</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.mahout</groupId>
+		<artifactId>mahout-collections</artifactId>
+		<version>1.0</version>
+	</dependency>
+	<dependency>
 		<groupId>javax.servlet</groupId>
 		<artifactId>javax.servlet-api</artifactId>
 		<version>3.0.1</version>
