--- a/Recommender/pom.xml
+++ b/Recommender/pom.xml
@@ -40,6 +40,32 @@
 		<version>3.0.1</version>
 		<scope>provided</scope>
 	</dependency>
+	<dependency>
+		<groupId>org.apache.mahout</groupId>
+		<artifactId>mahout-math</artifactId>
+		<version>0.11.1</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.mahout</groupId>
+		<artifactId>mahout</artifactId>
+		<version>0.11.1</version>
+		<type>pom</type>
+	</dependency>
+	<dependency>
+		<groupId>org.mongodb</groupId>
+	    <artifactId>mongodb-driver</artifactId>
+	    <version>3.0.4</version>
+	</dependency>
+	<dependency>
+		<groupId>org.mongodb</groupId>
+		<artifactId>bson</artifactId>
+		<version>2.3</version>
+	</dependency>
+	<dependency>
+		<groupId>org.mongodb</groupId>
+		<artifactId>mongodb-driver-core</artifactId>
+		<version>3.2.1</version>
+	</dependency>
   </dependencies>
   <build>
     <finalName>Recommender</finalName>
