--- a/Recommender/pom.xml
+++ b/Recommender/pom.xml
@@ -5,69 +5,81 @@
   <artifactId>Recommender</artifactId>
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
-  <name>Recommender Maven Webapp</name>
+  <name>Recommender</name>
   <url>http://maven.apache.org</url>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-    	<groupId>org.primefaces</groupId>
-    	<artifactId>primefaces</artifactId>
-    	<version>5.1</version>
-    </dependency>
-    <dependency>
-	    <groupId>org.apache.mahout</groupId>
-	    <artifactId>mahout-hdfs</artifactId>
-	    <version>0.11.1</version>
-	</dependency>
+    <dependencies>
 	<dependency>
-		<groupId>org.apache.mahout</groupId>
-		<artifactId>mahout-core</artifactId>
-		<version>0.9</version>
+		<groupId>org.glassfish.jersey.containers</groupId>
+		<artifactId>jersey-container-simple-http</artifactId>
+		<version>2.11</version>
 	</dependency>
+		
 	<dependency>
-		<groupId>org.apache.mahout</groupId>
-		<artifactId>mahout-collections</artifactId>
-		<version>1.0</version>
+		<groupId>org.glassfish.jersey.core</groupId>
+		<artifactId>jersey-server</artifactId>
+		<version>2.11</version>
 	</dependency>
+
+   <dependency>
+   		<groupId>org.glassfish.jersey.containers</groupId>
+        <artifactId>jersey-container-servlet</artifactId>
+		<version>2.11</version>
+   </dependency>
+        
+   <dependency>
+		<groupId>org.glassfish.jersey.media</groupId>
+		<artifactId>jersey-media-json-jackson</artifactId>
+		<version>2.11</version>
+	</dependency>
+		
 	<dependency>
 		<groupId>javax.servlet</groupId>
 		<artifactId>javax.servlet-api</artifactId>
 		<version>3.0.1</version>
 		<scope>provided</scope>
 	</dependency>
+		
 	<dependency>
-		<groupId>org.apache.mahout</groupId>
-		<artifactId>mahout-math</artifactId>
-		<version>0.11.1</version>
+		<groupId>com.eclipsesource.minimal-json</groupId>
+		<artifactId>minimal-json</artifactId>
+		<version>0.9.1</version>
 	</dependency>
-	<dependency>
-		<groupId>org.apache.mahout</groupId>
-		<artifactId>mahout</artifactId>
-		<version>0.11.1</version>
-		<type>pom</type>
-	</dependency>
-	<dependency>
-		<groupId>org.mongodb</groupId>
-	    <artifactId>mongodb-driver</artifactId>
-	    <version>3.0.4</version>
-	</dependency>
-	<dependency>
-		<groupId>org.mongodb</groupId>
-		<artifactId>bson</artifactId>
-		<version>2.3</version>
-	</dependency>
-	<dependency>
-		<groupId>org.mongodb</groupId>
-		<artifactId>mongodb-driver-core</artifactId>
-		<version>3.2.1</version>
-	</dependency>
-  </dependencies>
+    
+    <dependency>
+    	<groupId>junit</groupId>
+    	<artifactId>junit</artifactId>
+    	<version>4.6</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.mongodb</groupId>
+    	<artifactId>bson</artifactId>
+    	<version>3.0.4</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.mongodb</groupId>
+    	<artifactId>mongodb-driver</artifactId>
+    	<version>3.0.4</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.mongodb</groupId>
+    	<artifactId>mongodb-driver-core</artifactId>
+    	<version>3.2.1</version>
+    </dependency>
+    
+    </dependencies>
   <build>
-    <finalName>Recommender</finalName>
-  </build>
+	<finalName>Recommender</finalName>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.0</version>
+            <configuration>
+                <source>1.7</source>
+                <target>1.7</target>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
+
 </project>
