--- a/Recommender/pom.xml
+++ b/Recommender/pom.xml
@@ -39,6 +39,27 @@
 		<artifactId>xstream</artifactId>
 		<version>1.4.4</version>
 	</dependency>
+	<dependency>
+	    <groupId>org.apache.mahout</groupId>
+	    <artifactId>mahout-hdfs</artifactId>
+	    <version>0.11.1</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.mahout</groupId>
+	    <artifactId>mahout-math</artifactId>
+	    <version>0.11.1</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.mahout.commons</groupId>
+		<artifactId>commons-cli</artifactId>
+		<version>2.0-mahout</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.mahout</groupId>
+		<artifactId>mahout-core</artifactId>
+		<version>0.4</version>
+	</dependency>
+		
   </dependencies>
   <build>
     <finalName>Recommender</finalName>
