--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "morgan": "~1.5.3",
     "request": "~2.0",
     "serve-favicon": "~2.2.1",
-    "socket.io": "^1.4.4"
+    "socket.io": "^1.4.4",
+    "checklist-model": "0.9.0" 
   }
 }
