--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "request": "~2.0",
     "serve-favicon": "~2.2.1",
     "socket.io": "^1.4.4",
-    "checklist-model": "0.9.0" 
+    "checklist-model": "0.9.0",
+    "xmldom": "*"
   }
 }
