--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,14 @@ RemoteSystemsTempFiles
 .recommenders
 Servers
 aplications
- 
+docs/memoria-TFG/memoria-TFG-Slavcho-Ivanov.aux
+docs/memoria-TFG/memoria-TFG-Slavcho-Ivanov.bbl
+docs/memoria-TFG/memoria-TFG-Slavcho-Ivanov.blg
+docs/memoria-TFG/memoria-TFG-Slavcho-Ivanov.lof
+docs/memoria-TFG/memoria-TFG-Slavcho-Ivanov.txt
+docs/memoria-TFG/memoria-TFG-Slavcho-Ivanov.lot
+docs/memoria-TFG/memoria-TFG-Slavcho-Ivanov.out
+docs/memoria-TFG/memoria-TFG-Slavcho-Ivanov.toc
+docs/memoria-TFG/memoria-TFG-Slavcho-Ivanov.log
+docs/memoria-TFG/memoria-TFG-Slavcho-Ivanov.synctex.gz
+docs/memoria-TFG/memoria-TFG-Slavcho-Ivanov.tex
