--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "serve-favicon": "~2.2.1",
     "socket.io": "^1.4.4",
     "checklist-model": "0.9.0",
-    "xmldom": "*"
+    "xmldom": "*",
+    "utf8": "*"
   }
 }
